--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -1,3 +1,6 @@
 <p>
-  game works!
+  Game
 </p>
+<h1>{{ login }}</h1>
+<div>{{ timer | async }} seconds left</div>
+<button *ngFor="let move of moves" (click)="sendGesture(move)">{{ move }}</button>
