--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -1,6 +1,13 @@
 <p>
   Game
 </p>
-<h1>{{ login }}</h1>
-<div>{{ timer | async }} seconds left</div>
-<button *ngFor="let move of moves" (click)="sendGesture(move)">{{ move }}</button>
+<ng-container *ngIf="timer; else loading">
+  <div>{{ timer | async }} seconds left</div>
+  <div>last winner: {{ status.winner }}</div>
+  <div>{{ login }} score: {{ status.playerScore }}</div>
+  <div>opponent score: {{ status.opponentScore }}</div>
+  <button *ngFor="let move of moves" (click)="sendGesture(move)">{{ move }}</button>
+</ng-container>
+<ng-template #loading>
+  <div>The game will soon begin...</div>
+</ng-template>
