Add full report and env var

--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -1,13 +1,20 @@
 <p>
   Game
 </p>
-<ng-container *ngIf="timer; else loading">
-  <div>{{ timer | async }} seconds left</div>
-  <div>last winner: {{ status.winner }}</div>
-  <div>{{ login }} score: {{ status.playerScore }}</div>
-  <div>opponent score: {{ status.opponentScore }}</div>
-  <button *ngFor="let move of moves" (click)="sendGesture(move)">{{ move }}</button>
+<ng-container *ngIf="!gameOver; else displayWinner">
+  <ng-container *ngIf="timer; else loading">
+    <div>{{ timer | async }} seconds left</div>
+    <div>last winner: {{ status.winner }}</div>
+    <div>{{ login }} score: {{ status.playerScore }}</div>
+    <div>opponent score: {{ status.opponentScore }}</div>
+    <button *ngFor="let move of moves" (click)="sendGesture(move)">{{ move }}</button>
+  </ng-container>
+  <ng-template #loading>
+    <div>The game will soon begin...</div>
+  </ng-template>
 </ng-container>
-<ng-template #loading>
-  <div>The game will soon begin...</div>
+
+<ng-template #displayWinner>
+  {{ gameOverMessage }}
+  <button (click)="downloadReport()">Download Report</button>
 </ng-template>
